--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,14 @@ body {
 
 .first-line {
   display:flex;
-  padding:10px;
+  padding:10px 10px 0px;
 }
 
 .second-line {
   display:flex;
+  color:grey;
+  font-size:12px;
+  margin-left:55px;
 }
 
 .post-number {
@@ -23,7 +26,11 @@ body {
 }
 
 .source {
-  font-size:12px;
+  font-size:13px;
   color:grey;
   padding:5px;
+}
+
+.username, .time, .flag, .hide, .comments {
+  padding-left: 8px;
 }
